SyndiShanX/user.css
/* ... */
/* Zoom */
html {
	zoom: 85%!important;
}
.main-nowPlayingBar-container, #tippy-main, .main-navBar-mainNav .os-padding {
	zoom: 117.5%!important;
}
#tippy-spicetify {
	zoom: 117.5%!important;
	position: relative!important;
	top: -810px!important;
	left: -80px!important;
	width: max-content!important;
}

/* Light Background Image */
.main-home-homeHeader, .x-entityHeader-overlay, .x-actionBarBackground-background, .main-contextMenu-menu, .main-navBar-mainNav .os-padding, .main-trackList-selected, #spicetify-playlist-list,
.main-dropDown-dropDown, textarea, input, .main-yourLibraryX-libraryRootlist, .view-homeShortcutsGrid-main {
	background-image: var(--bgImage)!important;
	background-clip: border-box!important;
	background-origin: padding-box!important;
	background-attachment: scroll!important;
	background-repeat: repeat!important;
	background-size: auto!important;
	background-position: left top!important;
}

/* Hover Background Image */
.main-card-card:hover, .main-contextMenu-menuItem:hover, #spicetify-playlist-list .main-useDropTarget-base:hover, .lyrics-lyrics-background, .main-trackList-trackListRow:hover {
	background-image: var(--bgDarkness1)!important;
	background-clip: border-box!important;
	background-origin: padding-box!important;
	background-attachment: scroll!important;
	background-repeat: repeat!important;
	background-size: auto!important;
	background-position: left top!important;
}

/* Playback Bar Background Image */
.main-nowPlayingBar-nowPlayingBar .playback-bar, .main-nowPlayingBar-container, .main-yourLibraryX-navItems, .main-yourLibraryX-libraryContainer {
	background-image: var(--bgDarkness2)!important;
	background-clip: border-box!important;
	background-origin: padding-box!important;
	background-attachment: scroll!important;
	background-repeat: repeat!important;
	background-size: auto!important;
	background-position: left top!important;
}

/* Dark Background Image */
.main-entityHeader-backgroundColor, .main-navBar-mainNav, .main-topBar-background, .main-topBar-overlay,
.main-trackList-trackListHeader, .Root__top-bar, .main-actionBar-ActionBar, .main-card-card, .main-actionBarBackground-background, .main-view-container, .main-home-homeHeader,
.contentSpacing:not(.main-entityHeader-container), .Root__top-container, .main-navBar-mainNav, .GenericModal:not([aria-label="Advertisement"])>div {
	background-image: var(--bgDarkness3)!important;
	background-clip: border-box!important;
	background-origin: padding-box!important;
	background-attachment: scroll!important;
	background-repeat: repeat!important;
	background-size: auto!important;
	background-position: left top!important;
}

/* Scrollbar */
.os-scrollbar {
  display: unset!important;
	background: 0 0!important;
	border: none!important;
	width: var(--scrollbar-width)!important;
}
.os-scrollbar-handle {
  border-radius: 20px!important;
  background: var(--scrollbar-thumb)!important;
	min-height: 60px!important;
}
.os-scrollbar-handle:hover {
  border-radius: 20px!important;
  background: var(--scrollbar-thumb-hover)!important;
}

/* Main Tweaks */
.main-leaderboardComponent-container {
	display: none!important;
}
.main-card-card, .Z35BWOA10YGn5uc9YgAp, .GenericModal {
	border-radius: 10px!important;
}
.main-rootlist-statusIcons {
	position: relative!important;
	right: 10px!important;
}
.x-settings-container {
	max-width: 95%!important;
}
.main-contextMenu-menu .main-contextMenu-menuItem:nth-child(7) {
	display: none;
}
.lyrics-lyrics-background {
	background-color: transparent!important;
}
.Root.encore-dark-theme {
	--panel-gap: 0px!important;
}

/* Button Colors */
.main-addButton-active, .control-button--active, .control-button-heart[aria-checked=true], .main-trackList-statusChangeUp, .MBzbwWcyfbqSftBtnn3g button>svg,
.main-userWidget-active, input:checked~.x-toggle-indicatorWrapper, .connect-device-list-item--active, .connect-device-list-item--active .connect-device-list-item__device-subtitle,
.connect-device-list-item--active .connect-device-list-item__icon, .main-trackList-trackListRow.main-trackList-active .main-trackList-rowMarker,
.main-trackList-trackListRow.main-trackList-active .main-trackList-rowTitle, .m6Bvw7PNXw2WXqruLOLE, .main-addButton-active, .xbsDt2_VfIDs0cQOXvgf, .CCeu9OfWSwIAJqA49n84,
.main-navBar-mainNavItem .main-useDropTarget-base--active, .Yw9u5QqYvW1sY8hr729O svg, .main-yourEpisodesButton-yourEpisodesIcon, .rqhyBEi1217s5l9KD42B:hover, .rOqbwjYwx0AIWTfoYOQe:hover,
.eymcN9Ndbrbe5jR7URP_:hover, .UeXQSrlNnaXUBtIOShTh:hover, .ioDnN5QkrvTdd8oOrl2h, .main-trackList-trackListRow.main-trackList-active:hover .main-trackList-rowMarker,
.main-trackList-trackListRow.main-trackList-active:hover .main-trackList-rowTitle, .main-trackList-trackListRow.main-trackList-active:focus-within .main-trackList-rowMarker,
.main-trackList-trackListRow.main-trackList-active:focus-within .main-trackList-rowTitle, .control-button--active, .control-button--active:not(.control-button--disabled):focus,
.control-button--active:not(.control-button--disabled):hover, .control-button--active:not(.control-button--disabled):active:focus, .control-button--active:not(.control-button--disabled):active:hover,
.main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA, .main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):focus, .main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):hover,
.main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):focus:not(:focus-visible):not(:hover), .main-repeatButton-button.tP0mccyU1WAa7I9PevC1,
.main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):focus, .main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):hover,
.main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):focus:not(:focus-visible):not(:hover) {
	color: #35AFEA!important;
}
/* ... */

